<?xml version="1.0"?>
<package>
  <name>laserscan_merger</name>
  <version>1.0.4</version>
  <description>The lasercan_merger package. Based on the ira_laser_tools (http://www.ros.org/wiki/ira_laser_tools)</description>

  <maintainer email="noeperez@upo.es">Noé Pérez-higueras</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>roscpp</run_depend>

  <!-- Needed to work around https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=894656 on Debian Stretch -->
  <build_depend>libvtk-qt</build_depend>
  <run_depend>libvtk-qt</run_depend>
  
</package>
